--- a/public/inside.html
+++ b/public/inside.html
@@ -85,12 +85,12 @@
 
 <body>
 
-    <audio id="notifySound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
+    <audio id="notifySound" src="notify.mp3" preload="auto"></audio>
 
     <div class="logo-container">
         <img src="logo.png" alt="شعار" class="logo">
     </div>
-    
+
     <h2>قائمة طلبات الدخول</h2>
 
 
