--- a/public/leader2.html
+++ b/public/leader2.html
@@ -9,7 +9,7 @@
       font-family: 'Tahoma', sans-serif;
       background: #eef2f3;
       padding: 20px;
-      text-align: right;
+      text-align: center;
     }
 
     .logo-container {
@@ -57,7 +57,7 @@
 
     .btn {
       padding: 8px 16px;
-      font-size: 14px;
+      font-size: 24px;
       border: none;
       border-radius: 6px;
       cursor: pointer;
