--- a/public/outside.html
+++ b/public/outside.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Tahoma', sans-serif;
-      background: #f5f5f5;
+      background: #eef2f3;
       padding: 20px;
       text-align: center;
       align-items: center;
@@ -108,7 +108,7 @@
       background-position-y: center;
       border: 1px solid #ccc;
       border-radius: 4px;
-      font-size: 20px;
+      font-size: 24px;
       width: 51.5%;
       border: 1px solid;
       padding: 8px;
