--- a/public/leader2.html
+++ b/public/leader2.html
@@ -16,7 +16,7 @@
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      height: 25vh;
+      height: 20vh;
       margin-bottom: 20px;
     }
 
@@ -29,20 +29,28 @@
       margin-bottom: 20px;
     }
 
+
     ul {
       list-style: none;
-      padding: 0;
+      padding: 8px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 40px;
+      justify-items: center;
     }
 
     li {
       background: white;
-      margin-bottom: 15px;
       padding: 15px;
+      margin: 16px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       font-size: 24px;
       position: relative;
+      width: 100%;
+      max-width: 400px;
     }
+
 
     .status {
       font-weight: bold;
@@ -88,7 +96,7 @@
     <img src="logo.png" alt="شعار" class="logo" />
   </div>
 
-  <h2>قائمة طلبات القائد الثاني</h2>
+  <h2>قائمة الانتظار</h2>
 
   <ul id="approveList"></ul>
 
