--- a/public/leader1.html
+++ b/public/leader1.html
@@ -2,182 +2,216 @@
 <html lang="ar" dir="rtl">
 
 <head>
-    <meta charset="UTF-8">
-    <title>طلبات القائد</title>
-    <style>
-        .logo-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 20vh;
-            margin-bottom: 20px;
-        }
+  <meta charset="UTF-8">
+  <title>طلبات القائد</title>
+  <style>
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 20vh;
+      margin-bottom: 20px;
+    }
 
-        .logo {
-            height: 100%;
-            object-fit: contain;
-        }
+    .logo {
+      height: 100%;
+      object-fit: contain;
+    }
 
-        body {
-            font-family: 'Tahoma', sans-serif;
-            background: #eef2f3;
-            padding: 20px;
-            text-align: center;
-        }
+    body {
+      font-family: 'Tahoma', sans-serif;
+      background: #eef2f3;
+      padding: 20px;
+      text-align: center;
+    }
 
-        h2 {
-            margin-bottom: 20px;
-        }
+    h2 {
+      margin-bottom: 20px;
+    }
 
-        ul {
-            list-style: none;
-            padding: 8px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 40px;
-            justify-items: center;
-        }
+    ul {
+      list-style: none;
+      padding: 8px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 40px;
+      justify-items: center;
+    }
 
-        li {
-            background: white;
-            padding: 15px;
-            margin: 16px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            font-size: 24px;
-            position: relative;
-            width: 100%;
-            max-width: 400px;
-        }
+    li {
+      background: white;
+      padding: 15px;
+      margin: 16px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      font-size: 24px;
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+    }
 
-        .status {
-            font-weight: bold;
-            color: #555;
-            display: block;
-            margin-top: 10px;
-        }
+    .status {
+      font-weight: bold;
+      color: #555;
+      display: block;
+      margin-top: 10px;
+    }
 
-        .btn-group {
-            margin-top: 15px;
-        }
+    .btn-group {
+      margin-top: 15px;
+    }
 
-        .btn {
-            padding: 8px 16px;
-            font-size: 22px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            margin-left: 10px;
-        }
+    .btn {
+      padding: 8px 16px;
+      font-size: 22px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-left: 10px;
+    }
 
-        .btn-approve {
-            background-color: #4CAF50;
-            color: white;
-        }
+    .btn-approve {
+      background-color: #4CAF50;
+      color: white;
+    }
 
-        .btn-reject {
-            background-color: #f44336;
-            color: white;
-        }
+    .btn-reject {
+      background-color: #f44336;
+      color: white;
+    }
 
-        .btn:hover {
-            opacity: 0.9;
-        }
-    </style>
+    .btn:hover {
+      opacity: 0.9;
+    }
+
+    /* 🔔 FAB styles */
+    .fab-sound {
+      position: fixed;
+      bottom: 30px;
+      left: 30px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      font-size: 26px;
+      background-color: #2196F3;
+      color: white;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      z-index: 999;
+      transition: background-color 0.3s ease;
+    }
+
+    .fab-sound:hover {
+      background-color: #1976D2;
+    }
+  </style>
 </head>
 
 <body>
 
-    <audio id="notifySound" src="leader1.mp3" preload="auto"></audio>
+  <audio id="notifySound" src="leader1.mp3" preload="auto"></audio>
 
-    <div class="logo-container">
-        <img src="logo.png" alt="شعار" class="logo">
-    </div>
+  <div class="logo-container">
+    <img src="logo.png" alt="شعار" class="logo">
+  </div>
 
-    <h2>قائمة الانتظار</h2>
+  <h2>قائمة الانتظار</h2>
 
-    <ul id="approveList"></ul>
+  <ul id="approveList"></ul>
 
-    <script src="http://127.0.0.1:3000/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io("http://127.0.0.1:3000");
-        const approveList = document.getElementById("approveList");
-        const notifySound = document.getElementById("notifySound");
+  <!-- 🔔 Floating Button to Toggle Sound -->
+  <button id="toggleSoundBtn" class="fab-sound" onclick="toggleSound()" title="صوت التنبيه مفعل">🔔</button>
 
-        let previousRequestCount = 0;
-        let lastStatuses = {};
-        let soundAllowed = false;
+  <script src="http://127.0.0.1:3000/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io("http://127.0.0.1:3000");
+    const approveList = document.getElementById("approveList");
+    const notifySound = document.getElementById("notifySound");
+    const toggleSoundBtn = document.getElementById("toggleSoundBtn");
 
-        window.addEventListener('click', () => {
-            soundAllowed = true;
-        }, { once: true });
+    let previousRequestCount = 0;
+    let lastStatuses = {};
+    let soundAllowed = true; // default is ON
 
-        socket.on('update-leader1-requests', (requests) => {
-            requests = requests.filter(req => req.leader === 'leader1');
-            let shouldPlaySound = false;
+    function toggleSound() {
+      soundAllowed = !soundAllowed;
 
-            if (requests.length > previousRequestCount) {
-                shouldPlaySound = true;
-            }
+      if (soundAllowed) {
+        toggleSoundBtn.innerText = "🔔";
+        toggleSoundBtn.title = "صوت التنبيه مفعل";
+      } else {
+        toggleSoundBtn.innerText = "🔕";
+        toggleSoundBtn.title = "صوت التنبيه متوقف";
+      }
+    }
 
-            requests.forEach(req => {
-                lastStatuses[req.id] = req.status;
-            });
+    socket.on('update-leader1-requests', (requests) => {
+      requests = requests.filter(req => req.leader === 'leader1');
+      let shouldPlaySound = false;
 
-            previousRequestCount = requests.length;
+      if (requests.length > previousRequestCount) {
+        shouldPlaySound = true;
+      }
 
-            if (shouldPlaySound && soundAllowed) {
-                notifySound.play().catch((err) => {
-                    console.warn("🔇 Sound play blocked:", err.message);
-                });
-            }
+      requests.forEach(req => {
+        lastStatuses[req.id] = req.status;
+      });
 
-            render(requests);
+      previousRequestCount = requests.length;
+
+      if (shouldPlaySound && soundAllowed) {
+        notifySound.play().catch((err) => {
+          console.warn("🔇 Sound play blocked:", err.message);
         });
+      }
 
-        function respond(id, decision) {
-            socket.emit('respond-leader1-request', { id, decision });
+      render(requests);
+    });
+
+    function respond(id, decision) {
+      socket.emit('respond-leader1-request', { id, decision });
+    }
+
+    function render(requests) {
+      approveList.innerHTML = '';
+      const statusText = {
+        waiting: "في الانتظار",
+        approved: "تمت الموافقة",
+        rejected: "تم الرفض"
+      };
+
+      requests.forEach(req => {
+        const li = document.createElement('li');
+        li.innerHTML = `
+          <strong>الاسم:</strong> ${req.name}<br>
+          <strong>السبب:</strong> ${req.reason}
+          <span class="status">الحالة: ${statusText[req.status]}</span>
+        `;
+
+        if (req.status === 'waiting') {
+          const btnGroup = document.createElement('div');
+          btnGroup.className = 'btn-group';
+
+          const approveBtn = document.createElement('button');
+          approveBtn.innerText = 'موافقة';
+          approveBtn.className = 'btn btn-approve';
+          approveBtn.onclick = () => respond(req.id, 'approved');
+
+          const rejectBtn = document.createElement('button');
+          rejectBtn.innerText = 'رفض';
+          rejectBtn.className = 'btn btn-reject';
+          rejectBtn.onclick = () => respond(req.id, 'rejected');
+
+          btnGroup.appendChild(approveBtn);
+          btnGroup.appendChild(rejectBtn);
+          li.appendChild(btnGroup);
         }
 
-        function render(requests) {
-            approveList.innerHTML = '';
-            const statusText = {
-                waiting: "في الانتظار",
-                approved: "تمت الموافقة",
-                rejected: "تم الرفض"
-            };
-
-            requests.forEach(req => {
-                const li = document.createElement('li');
-                li.innerHTML = `
-                    <strong>الاسم:</strong> ${req.name}<br>
-                    <strong>السبب:</strong> ${req.reason}
-                    <span class="status">الحالة: ${statusText[req.status]}</span>
-                `;
-
-                if (req.status === 'waiting') {
-                    const btnGroup = document.createElement('div');
-                    btnGroup.className = 'btn-group';
-
-                    const approveBtn = document.createElement('button');
-                    approveBtn.innerText = 'موافقة';
-                    approveBtn.className = 'btn btn-approve';
-                    approveBtn.onclick = () => respond(req.id, 'approved');
-
-                    const rejectBtn = document.createElement('button');
-                    rejectBtn.innerText = 'رفض';
-                    rejectBtn.className = 'btn btn-reject';
-                    rejectBtn.onclick = () => respond(req.id, 'rejected');
-
-                    btnGroup.appendChild(approveBtn);
-                    btnGroup.appendChild(rejectBtn);
-                    li.appendChild(btnGroup);
-                }
-
-                approveList.appendChild(li);
-            });
-        }
-    </script>
+        approveList.appendChild(li);
+      });
+    }
+  </script>
 </body>
 
 </html>
